# vim: set noexpandtab:

2013-06-10 Steve
	* Corrected overlap removal with taus (thanks Estel)
		* Removal of taus from leptons done before lep-jet OR
		* Removal of jets from taus is still kept at the end

2013-06-10 Steve
	* Added control for ID level of all three tau selection cuts: jetBDT, eleBDT, muVeto
	* Commented out getSignalObjects method which doesn't save baseline objects
		* Baseline objects are needed for cleaning cuts
	* Modified default tau selection
		* Baseline and signal taus are the same: medium ID with loose ele BDT
			* These taus are used for the overlap removal!
		* Tight taus have all tight ID
	* Modified overlap removal prescription
		* Tau overlap done last to de-couple taus and leptons for consistent bkg estimations
	* Tagging SusyNtuple-00-00-59

2013-06-07 Steve
	* Added preElectrons, preMuons, preJets vectors to SusyNtAna
	* New getBaselineObjects methods now fill the pre-object vectors above
		* Needed for the on-the-fly cleaning cuts
	* Added new methods for computing object cleaning cuts on-the-fly
		* cleaningCutFlags returns a recomputed cutFlag bitword
		* hasHotSpotJet checks for hot tile jets
		* hasBadJet checks for very loose bad jets
		* hasCosmicMuon checks for cosmic flagged muon
		* hasBadMuon checks for bad muon
	* Made object vectors in object selection methods const reference
	* Updated Susy3LepCutflow to use new cleaning cuts
	* Tagging SusyNtuple-00-00-58

2013-06-06 Steve
	* Tagging SusyNtuple-00-00-57

2013-06-05 Steve
	* Added missing variable statements in Jet copy/assignment constructors
	* Added flags for applying object level cleaning cuts on the fly from SusyNt
		* isBadMuon and isCosmic to Muon class
		* isBadVeryLoose and isHotTile to Jet class

2013-05-24 Matt
	* Adding muon eta check for muons making sure trigger match only for 2.4 muons

2013-05-24 Anyes
	* Committing changes to TGuiUtils for PR plots

2013-05-19 Steve
	* Tagging SusyNtuple-00-00-56

2013-05-19 Steve