@@ -120,6 +120,7 @@ enum D3PDTag
   D3PD_p1032 = 0,
   D3PD_p1181,
   D3PD_p1328,
+  D3PD_p1512,
   D3PD_N
 };
 
@@ -420,7 +421,6 @@ const float MUON_ETA_CUT     = 2.4;  // Currently applied in SusyNtMaker
 const float JET_ETA_CUT      = 2.5;  // Cut in SusyNtMaker is 4.9 Maybe change?
                                      // --> No, 2.5 is SIGNAL JET eta!!
 const float JET_JVF_CUT      = 0.5; 
- 
 //const float JET_JVF_CUT_2L   = 0.2;  
 const float JET_JVF_CUT_2L   = 0.0;  
 const float JET_JVF_PT       = 50;  
